# range_training_screen

./: LICENSE  README.md  example_config.json  platformio.ini
.github/workflows/: main.yml
include/: lv_conf.h  ui.h  ui_PROGRAMS.h  ui_events.h  ui_menu.h  ui_ranking.h  ui_start_screen.h
range_training_screen/: platformio.ini
range_training_screen/.github/workflow/: main.yml
range_training_screen/include/: ui_Screen1.h  ui_coverfire.h  ui_dynamic.h  ui_events.h  ui_heavyfire.h  ui_helpers.h  ui_hostage.h  ui_settings.h  ui_training.h
range_training_screen/src/: CMakeLists.txt  actions.h  filelist.txt  main.cpp  ui_PROGRAMS.c  ui_comp_hook.c  ui_coverfire.c  ui_dynamic.c  ui_events.c  ui_font_Font1.c  ui_heavyfire.c  ui_helpers.c  ui_hostage.c  ui_img_cover_fire_png.c  ui_img_dynamic_png.c  ui_img_heavy_fire_png.c  ui_img_hostage_png.c  ui_img_start_screen2_png.c  ui_img_widget_programs_png.c  ui_menu.c
slave_example/: platformio.ini
slave_example/src/: main.cpp
src/: CMakeLists.txt  Frame.h  Havy_fire.cpp  Havy_fire.h  LGFX.h  Program.h  Shield.cpp  Shield.h  Shield_manager.cpp  Shield_manager.h  actions.h  config.h  filelist.txt  logger.cpp  logger.h  main.cpp  ui.c  ui_Screen1.c  ui_events.c  ui_font_Font2.c  ui_font_Font3.c  ui_font_tactic16.c  ui_font_tactic40.c  ui_font_weathericon.c  ui_img_MK_png.c  ui_img_ranking_png.c  ui_img_trainig_png.c  ui_img_widget_settings_png.c  ui_ranking.c  ui_settings.c  ui_start_screen.c  ui_training.c
